examples/test/testpolicy7670.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7670
  namespace: namespace305
spec:
  podSelector:
    matchLabels:
      key47: value7
      key26: value0
      key42: value17
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key40: value16
          key42: value34
      podSelector:
        matchLabels:
          key26: value45
